--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inventory-web-sdk",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "SDK to interact with all Inventory backend SDK.",
   "main": "public/dist/index.js",
   "types": "public/dist/index.d.js",
@@ -14,6 +14,6 @@
     "typescript": "^3.9.7"
   },
   "files": [
-    "public/dist/**/*"
+    "dist/**/*"
   ]
 }
