[update] First approach to return shaped objects.

--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
   "author": "Sergio Barbosa <sbarbosa115@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "dotenv": "^8.2.0",
+    "@types/jest": "^26.0.8",
+    "jest": "^26.2.2",
+    "ts-jest": "^26.1.4",
     "ts-loader": "^8.0.1",
     "tslint": "^6.1.2",
     "typescript": "^3.9.7"
   },
   "files": [
     "dist/**/*"
-  ]
+  ],
+  "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/node-fetch": "^2.5.7",
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.0"
+  }
 }
